# clone_digger_py3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  abstract_syntax_tree.py  anti_unification.py  arguments.py  ast_suppliers.py  classes.py  clone_detection_algorithm.py  clonedigger.py  global_settings.py  html_report.py  main.py  other_things_to_check_out.txt  output.html  pyproject.toml  python_compiler.py  settings.py  suffix_tree.py  test_me.py  test_t.py  todo.md
backend/: classes.py  clone_detection_algorithm.py  html_report.py  logging_related.py  python3_related.py  template.html
py2/: abstract_syntax_tree.py
src/: __main__.py  main.py  settings.py
src/backend/: ast_wrapper.py  classes.py  clone_detection_algorithm.py  html_report.py  logging_related.py  python3_related.py
src/report/: html_report.py
tests/: test_clonedigger.py  test_coverage.py  test_issue6.py  test_me.py
