[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clonedigger"
version = "0.1.0"
description = "Duplicate code detection for Python"
requires-python = ">=3.8"
dependencies = ["jinja2", "pydantic"]

[project.scripts]
clonedigger = "clonedigger.__main__:cli"

[tool.setuptools]
package-dir = {"clonedigger" = "src"}

[tool.setuptools.package-data]
"clonedigger.report" = ["template.html"]
